--- a/.github/workflows/python-runner.yml
+++ b/.github/workflows/python-runner.yml
@@ -1,19 +1,35 @@
-name: Run Python Script
+name: Run Python Tests
 
-on: [push]  # Trigger on push
+on:
+  pull_request:
+    branches:
+      - main  # Run on pull requests to main
 
 jobs:
-  run-python:
+  test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: Checkout repo
         uses: actions/checkout@v3
 
       - name: Set up Python
         uses: actions/setup-python@v5
         with:
-          python-version: '3.11'  # Use your preferred version
+          python-version: '3.11'
 
-      - name: Run Python Script
-        run: python main.py
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install pytest
+
+      - name: Run Tests with Pytest
+        run: |
+          mkdir -p test-results
+          pytest --junitxml=test-results/results.xml
+          
+      - name: Upload Test Report
+        uses: actions/upload-artifact@v4
+        with:
+          name: pytest-report
+          path: test-results/results.xml
