--- a/.github/workflows/python-runner.yml
+++ b/.github/workflows/python-runner.yml
@@ -1,10 +1,9 @@
 name: Run Python Tests
 
 on:
-  pull_request:
+  push:
     branches:
-      - main  # Run on pull requests to main
-
+      - main
 jobs:
   test:
     runs-on: ubuntu-latest
