--- a/.github/workflows/python-runner.yml
+++ b/.github/workflows/python-runner.yml
@@ -1,34 +1,28 @@
-name: Run Python Tests
+name: Run Pytest
 
 on:
   push:
     branches:
       - main
+
 jobs:
   test:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repo
+      - name: Checkout code
         uses: actions/checkout@v3
 
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.x'
 
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install pytest
+          pip install -r requirements.txt
 
-      - name: Run Tests with Pytest
+      - name: Run tests
         run: |
-          mkdir -p test-results
-          pytest --junitxml=test-results/results.xml
-          
-      - name: Upload Test Report
-        uses: actions/upload-artifact@v4
-        with:
-          name: pytest-report
-          path: test-results/results.xml
+          pytest
