--- a/.github/workflows/python-runner.yml
+++ b/.github/workflows/python-runner.yml
@@ -1,13 +1,9 @@
-name: Run Pytest
-
-on:
-  push:
-    branches:
-      - main
-
 jobs:
   test:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        python-version: ['3.8', '3.10', '3.11']
 
     steps:
       - name: Checkout code
@@ -16,7 +12,7 @@ jobs:
       - name: Set up Python
         uses: actions/setup-python@v4
         with:
-          python-version: '3.x'
+          python-version: ${{ matrix.python-version }}
 
       - name: Install dependencies
         run: |
@@ -24,5 +20,9 @@ jobs:
           pip install -r requirements.txt
 
       - name: Run tests
+        run: pytest
+      - name: Run tests with coverage
         run: |
-          pytest
+          pip install pytest-cov
+          pytest --cov=. --cov-report=xml --cov-report=html
+
