--- a/.github/workflows/python-runner.yml
+++ b/.github/workflows/python-runner.yml
@@ -1,3 +1,11 @@
+name: Run Pytest with Coverage
+
+on:
+  push:
+    branches:
+      - main
+  workflow_dispatch:  # Allow manual trigger from GitHub UI
+
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -18,11 +26,9 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install pytest-cov  # Install pytest-cov once
 
       - name: Run tests
-        run: pytest
-      - name: Run tests with coverage
         run: |
-          pip install pytest-cov
-          pytest --cov=. --cov-report=xml --cov-report=html
+          pytest --cov=. --cov-report=xml --cov-report=html  # Run tests with coverage
 
