--- a/.github/workflows/python-runner.yml
+++ b/.github/workflows/python-runner.yml
@@ -28,5 +28,18 @@ jobs:
           pip install -r requirements.txt
           pip install pytest-cov  # Install pytest-cov once
 
+      - name: Run tests with coverage
+        run: |
+          pytest --cov=main --cov-report=xml --cov-report=html --cov-report=html
+      
+      - name: Upload coverage report
+        uses: actions/upload-artifact@v3
+        with:
+          name: coverage-report
+          path: coverage.xml  # Or coverage.html for HTML
+
+
+  
+
       
 
